Created function to evaluate prediction from the model (0 as negative tweet, 1 as positive tweet)

--- a/artifacts/config.json
+++ b/artifacts/config.json
@@ -2,5 +2,6 @@
     "MAXLEN": 50,
     "tokenizer_path": "artifacts/tokenizer.pkl",
     "data_path": "dataset/training1600000.csv",
-    "simple_lstm_path": "models/simple_lstm.h5"
+    "simple_lstm_path": "models/simple_lstm.h5",
+    "class_mapping_path": "artifacts/class_mapping.pkl"
 }
